
Fixed lowercase host errors with cloaking (sts' patch)
--Luke
===================================

do_mode_char fixes (mostly from sts)
--Luke
===================================

SJ3 fixes from codemastr for possible desynch
--Luke
===================================

Fixed prefix problem as per nighthawk
--Luke
===================================

Temp removed +q/+a prefixes to give client coders
chance to implement PREFIX= sanely
--Luke
===================================

Added a nice little win32 fix to cloak.c to stop snprintf
from breaking things all over the place
--Luke
===================================

Fixed win32 settings.h for the few who actually recompile
their own win32 version.
--Luke
===================================

Minor issue with +I and new invite system resolved.
We should remove +I altogether...
--Luke
===================================

Rmed a bunch of files in doc/ redid some other documentation.
--Luke
===================================

Finally redid /credits thanks to sts :P
--Luke
===================================

Fixed OPEROVERRIDE_VERIFY Bug
--Luke
===================================

*** Unreal3.1.4 Released ***

[ Unreal 3.1.5 ]

------------------------------------------
We begin this release with a stupid
bug fix. Yes, I severely broke userhost.
I'm sorry.
------------------------------------------

Beta1
----------------------------

Fixed userhost displaying * all the time
--Luke
===================================

Fixed broken m_invite, thanks to codemastr
--Luke
===================================

Fixed halfop kick priv bug thanks to JK
--Luke
===================================

Added Oo flags in version response if
OPEROVERRIDE is enabled, and OPEROVERRIDE_VERIFY
enabled.
--Luke
===================================

Removed LEAST_IDLE, served no useful purpose
really.
--Luke
===================================

Fixed grammatical error thanks to MorPheus
--Luke
===================================