@@ -658,3 +658,7 @@ really.
 Fixed grammatical error thanks to MorPheus
 --Luke
 ===================================
+
+Fixed m_invite, really. I tested it this time :)
+--Luke
+===================================
